# minecraft-stats

./: .env  .gitignore  Cargo.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
migrations/2025-07-24-134003_init/: down.sql  up.sql
src/: db.rs  main.rs  reader.rs  schema.rs  structs.rs
